--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.1.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
@@ -19,6 +21,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "iview-loader": "^1.3.0",
+    "view-design": "^4.0.1",
     "vue-cli-plugin-viewui": "^2.0.0",
     "vue-template-compiler": "^2.6.10"
   },
